# Plutus

./: .dockerignore  .ebignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.aws.yml  docker-compose.prod.yml  pyproject.toml
.devcontainer/: devcontainer.json
.ebextensions/: 01-volume.config  env.config
.github/workflows/: ci.yml  deploy.yml
api/: __init__.py  auth.py  billing_routes.py  portfolio_routes.py  server.py  ws.py
db/: init.sql
docs/: DESIGN.md  DEVELOPMENT.md  INFRASTRUCTURE.md
evals/: __init__.py  groundedness.py  questions.jsonl  report.py  run_evals.py  seed_portfolio.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  shot-check.mjs  smoke.mjs  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts  utils.ts
frontend/src/components/: Markdown.tsx  PriceChart.tsx  SearchBar.tsx  TickerInput.tsx
frontend/src/lib/: ws.ts
frontend/src/stores/: portfolioStore.ts  settings.ts  streamStore.ts  workspace.ts
frontend/src/views/: AlertsView.tsx  AskView.tsx  MarketView.tsx  PaperView.tsx  PortfolioView.tsx  (+2 more)
scripts/: __init__.py  daily_digest.py  eb-create.sh  eb-deploy.sh  eb-start.sh  eb-stop.sh  eb-terminate.sh
src/portfolio_risk/: __init__.py  cache.py  config.py  db.py  tools.py
tests/: conftest.py  test_alerts.py  test_csv_import.py  test_groundedness.py  test_ledger.py  test_metrics.py  test_paper.py  test_portfolio.py  test_portfolio_db.py  test_portfolio_tools.py  test_rag.py  test_returns.py  test_tools.py
(+68 files in other folders)
